# irc.rs

./: Cargo.toml  README.md  Settings.toml
src/: codec.rs  main.rs  wire.rs
src/protocol/: codec.rs  mod.rs  prefix.rs  tags.rs  wire.rs
