[package]
name = "rust-irc"
version = "0.1.0"
authors = ["Karl Southern <karl@theangryangel.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
bytes = "0.5"
futures = "0.3.0"
config = "0.9"
